--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -55,7 +55,6 @@
 		display: flex;
 
 		&-left {
-			padding-left: 4em;
 			padding-right: 2em;
 		}
 	}
@@ -71,7 +70,7 @@
 
 	&__last {
 		&-list {
-			width: 400px;
+			max-width: 400px;
 		}
 
 		&-item {
@@ -80,11 +79,13 @@
 			justify-content: space-between;
 
 			i {
+				position: relative;
 				margin-left: auto;
 				padding: 0.2em;
 				font-size: 2rem;
 				cursor: pointer;
 				color: $text-second-color;
+				z-index: 1;
 			}
 		}
 	}
@@ -99,16 +100,16 @@
 	}
 
 	&__subsbox {
-		width: 400px;
+		width: 100%;
 		height: 160px;
 		padding: 0.5em 1em;
 		border-radius: 10px;
 		background: rgba(255, 255, 255, 0.1);
 		overflow-y: auto;
 
-	&::-webkit-scrollbar {
-		width: 0;
-	}
+		&::-webkit-scrollbar {
+			width: 0;
+		}
 
 		&-item {
 			display: flex;
@@ -138,13 +139,14 @@
 		background: $container-bg;
 
 		&--30 {
-			width: 30%;
 			display: flex;
 			align-items: center;
 		}
 
 		&-circle {
 			display: flex;
+			flex-direction: column;
+			align-items: center;
 
 			&-right,
 			&-left {
@@ -157,7 +159,7 @@
 			padding-bottom: 2.5em;
 
 			&-last {
-				width: 400px;
+				max-width: 400px;
 				padding-bottom: 2em;
 			}
 
@@ -188,6 +190,7 @@
 
 		&--expense-split {
 			background: $expense-split;
+			height: auto;
 		}
 
 		&--budget,
@@ -330,6 +333,10 @@
 			letter-spacing: 2.2px;
 		}
 
+		&--scale {
+			font-size: 3.2rem;
+		}
+
 		&--total {
 			padding: 1.5rem 0;
 		}
@@ -395,6 +402,22 @@ sup {
 	top: -5px;
 }
 
+@media (min-width: 576px){
+	.main {
+		&__container {
+			&--30 {
+				width: 30%;
+			}
+		}
+
+		&__text {
+			&--scale {
+				font-size: 3.6rem;
+			}
+		}
+	}
+}
+
 @media (min-width: 768px) {
 	.main {
 		&__top {
@@ -408,6 +431,10 @@ sup {
 		}
 
 		&__container {
+			&-circle {
+				flex-direction: row;
+			}
+			
 			&--total {
 				width: 50%;
 			}
@@ -422,6 +449,12 @@ sup {
 
 			&--expense-split {
 				width: 100%;
+			}
+		}
+
+		&__list {
+			&-left {
+				padding-left: 4rem;
 			}
 		}
 	}
